Link do LinkedIn add ao href e title =Meu LinkedIn
href="https://www.linkedin.com/in/devfabianomoraes/" alt="Meu LinkdIn" title="Meu LinkdIn"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <span></span>
     BLUE
   </a>
-  <a class="button" href="#" style="--color: #ff1867;">
+  <a class="button" href="https://www.linkedin.com/in/devfabianomoraes/" alt="Meu LinkdIn" title="Meu LinkdIn"
+    style="--color: #dcff18;">
     <span></span>
     <span></span>
     <span></span>
